// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Input Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="MuiFormControl-root-1 MuiTextField-root-0 input MuiFormControl-fullWidth-4"
      dir="rtl"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14"
        data-shrink={false}
      >
        שם פרטי
      </label>
      <div
        className="MuiInputBase-root-39 MuiInput-root-25 MuiInput-underline-30 MuiInputBase-fullWidth-49 MuiInput-fullWidth-34 MuiInputBase-formControl-40 MuiInput-formControl-26"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input-50 MuiInput-input-35"
          disabled={false}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Input Error 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="MuiFormControl-root-1 MuiTextField-root-0 input MuiFormControl-fullWidth-4"
      dir="rtl"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-error-21 MuiInputLabel-error-8 MuiFormLabel-filled-22"
        data-shrink={true}
      >
        שם פרטי
      </label>
      <div
        className="MuiInputBase-root-39 MuiInput-root-25 MuiInput-underline-30 MuiInputBase-error-45 MuiInput-error-31 MuiInputBase-fullWidth-49 MuiInput-fullWidth-34 MuiInputBase-formControl-40 MuiInput-formControl-26"
        onClick={[Function]}
      >
        <input
          aria-invalid={true}
          autoFocus={false}
          className="MuiInputBase-input-50 MuiInput-input-35"
          disabled={false}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
          value="משה 123"
        />
      </div>
      <p
        className="MuiFormHelperText-root-57 MuiFormHelperText-error-58 MuiFormHelperText-filled-63"
      >
        שם פרטי לא יכול להכיל מספרים
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Input Multiple Input 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "marginLeft": 20,
        "marginRight": 20,
      }
    }
  >
    <div
      className="component"
    >
      <div
        className="MuiFormControl-root-1 MuiTextField-root-0 input MuiFormControl-fullWidth-4"
        dir="rtl"
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22"
          data-shrink={true}
        >
          שדה מספר 1
        </label>
        <div
          className="MuiInputBase-root-39 MuiInput-root-25 MuiInput-underline-30 MuiInputBase-fullWidth-49 MuiInput-fullWidth-34 MuiInputBase-formControl-40 MuiInput-formControl-26"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input-50 MuiInput-input-35"
            disabled={false}
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value="תשובה כלשהי"
          />
        </div>
      </div>
    </div>
    <div
      className="component"
    >
      <div
        className="MuiFormControl-root-1 MuiTextField-root-0 input MuiFormControl-fullWidth-4"
        dir="rtl"
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22"
          data-shrink={true}
        >
          שדה מספר 2
        </label>
        <div
          className="MuiInputBase-root-39 MuiInput-root-25 MuiInput-underline-30 MuiInputBase-fullWidth-49 MuiInput-fullWidth-34 MuiInputBase-formControl-40 MuiInput-formControl-26"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input-50 MuiInput-input-35"
            disabled={false}
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value="תשובה כלשהי"
          />
        </div>
      </div>
    </div>
    <div
      className="component"
    >
      <div
        className="MuiFormControl-root-1 MuiTextField-root-0 input MuiFormControl-fullWidth-4"
        dir="rtl"
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22"
          data-shrink={true}
        >
          שדה מספר 3
        </label>
        <div
          className="MuiInputBase-root-39 MuiInput-root-25 MuiInput-underline-30 MuiInputBase-fullWidth-49 MuiInput-fullWidth-34 MuiInputBase-formControl-40 MuiInput-formControl-26"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input-50 MuiInput-input-35"
            disabled={false}
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value="תשובה כלשהי"
          />
        </div>
      </div>
    </div>
    <div
      className="component"
    >
      <div
        className="MuiFormControl-root-1 MuiTextField-root-0 input MuiFormControl-fullWidth-4"
        dir="rtl"
        onKeyPress={[Function]}
      >
        <label
          className="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22"
          data-shrink={true}
        >
          שדה מספר 4
        </label>
        <div
          className="MuiInputBase-root-39 MuiInput-root-25 MuiInput-underline-30 MuiInputBase-fullWidth-49 MuiInput-fullWidth-34 MuiInputBase-formControl-40 MuiInput-formControl-26"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input-50 MuiInput-input-35"
            disabled={false}
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value="תשובה כלשהי"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Input Password 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="MuiFormControl-root-1 MuiTextField-root-0 input MuiFormControl-fullWidth-4"
      dir="rtl"
      onKeyPress={[Function]}
    >
      <label
        className="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22"
        data-shrink={true}
      >
        סיסמה
      </label>
      <div
        className="MuiInputBase-root-39 MuiInput-root-25 MuiInput-underline-30 MuiInputBase-fullWidth-49 MuiInput-fullWidth-34 MuiInputBase-formControl-40 MuiInput-formControl-26 MuiInputBase-adornedEnd-44"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input-50 MuiInput-input-35 MuiInputBase-inputAdornedEnd-55"
          disabled={false}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="password"
          value="password1234"
        />
        <div
          className="MuiInputAdornment-root-57 MuiInputAdornment-positionEnd-60"
        >
          <button
            className="MuiButtonBase-root-73 MuiIconButton-root-64 MuiIconButton-edgeEnd-66"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiIconButton-label-72"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root-76"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 6c3.79 0 7.17 2.13 8.82 5.5C19.17 14.87 15.79 17 12 17s-7.17-2.13-8.82-5.5C4.83 8.13 8.21 6 12 6m0-2C7 4 2.73 7.11 1 11.5 2.73 15.89 7 19 12 19s9.27-3.11 11-7.5C21.27 7.11 17 4 12 4zm0 5c1.38 0 2.5 1.12 2.5 2.5S13.38 14 12 14s-2.5-1.12-2.5-2.5S10.62 9 12 9m0-2c-2.48 0-4.5 2.02-4.5 4.5S9.52 16 12 16s4.5-2.02 4.5-4.5S14.48 7 12 7z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
